Css style changed.

--- a/index.html
+++ b/index.html
@@ -6,8 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="js/script.js"></script>
-    <title>Jakub Pacewicz - wizytówka</title>
     <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+        rel="stylesheet">
+    <title>Jakub Pacewicz - wizytówka</title>
 </head>
 
 <body class="body">
@@ -39,7 +43,8 @@
                 <b>Taka nie jest!</b>
             </p>
             <li class="listItem">Fotografia</li>
-            <p class="text">Moim drugim takim hobby, tylko, że bardziej luźnym jest fotografia oraz grafika komputerowa. Lubię czasem
+            <p class="text">Moim drugim takim hobby, tylko, że bardziej luźnym jest fotografia oraz grafika komputerowa.
+                Lubię czasem
                 wykonać jakieś ciekawe zdjęcie. <strong>Zazwyczaj ludzie je chwalą!</strong></p>
 
         </ul>
